<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_IO" Id="{c8b20b5e-d11e-4d29-9934-9abc78f03f88}">
    <Declaration><![CDATA[// PLC IO from terminal modules
{attribute 'qualified_only'}
VAR_GLOBAL

    (* Slot1 EL3174 *)
    {attribute 'TcLinkTo' :=    'TIIB[EL3174_00_01]^AI Standard Channel 1^Value'}
    nOpcpaVoltageRaw AT %I* : INT; // Ch1 OPCPA Laser

    {attribute 'TcLinkTo' :=    'TIIB[EL3174_00_02]^AI Standard Channel 1^Value'}
    nAmphosVoltageRaw AT %I* : INT; // Ch2 Amphos Laser

    {attribute 'TcLinkTo' :=    'TIIB[EL3174_00_01]^AI Standard Channel 3^Value'}
    nMultiPassVoltageRaw AT %I* : INT; // Ch3 MultiPass Cell

 (* Slot4 EL1259 Inputs *)
    {attribute 'TcLinkTo' := 'TIIB[EL1259_00_04]^MTI Inputs 10x Channel 2^Status^Input state'}
    bTracetekAlarm AT %I* : BOOL; // Tracetek Alarm
    {attribute 'TcLinkTo' := 'TIIB[EL1259_00_04]^MTI Inputs 10x Channel 3^Status^Input state'}
    bLoopTempSW01 AT %I* : BOOL; // Ch3 Loop 01 NC Temp switch
    {attribute 'TcLinkTo' := 'TIIB[EL1259_00_04]^MTI Inputs 10x Channel 4^Status^Input state'}
    bLoopTempSW02 AT %I* : BOOL; // Ch4 Loop 02 NC Temp switch
    {attribute 'TcLinkTo' := 'TIIB[EL1259_00_04]^MTI Inputs 10x Channel 5^Status^Input state'}
    bLoopTempSW03 AT %I* : BOOL; // Ch5 Loop 03 NC Temp switch
    {attribute 'TcLinkTo' := 'TIIB[EL1259_00_04]^MTI Inputs 10x Channel 6^Status^Input state'}
    bLoopTempSW04 AT %I* : BOOL; // Ch6 Loop 04 NC Temp switch
    {attribute 'TcLinkTo' := 'TIIB[EL1259_00_04]^MTI Inputs 10x Channel 1^Status^Input state'}
    bLoopTempSW05 AT %I* : BOOL; // Ch1 Loop 05 NC Temp switch
    {attribute 'TcLinkTo' := 'TIIB[EL1259_00_04]^MTI Inputs 10x Channel 8^Status^Input state'}
    bBaseplateChillerFlow AT %I* : BOOL; // Baseplate chiller NC flow sensor
    {attribute 'TcLinkTo' := 'TIIB[EL1259_00_04]^MTI Inputs 10x Channel 7^Status^Input state'}
    bDumpChillerFlow AT %I* : BOOL; //Dump Chiller flow sensor

//LabJack IO connection Amphos controller TBD

    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS:POWER_STATE
        io: i
        field: ZNAM "OFF"
        field: ONAM "ON"
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL1124_00_11]^Channel 1^Input'}
    bAmphosOn AT %I* : BOOL; //  Laser ON - LabJACK IO

    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS:LASER_READY
        io: i
        field: ZNAM "OFF"
        field: ONAM "ON"
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL1124_00_11]^Channel 4^Input'}
    bAmphosLaserReady AT %I* : BOOL; //  Laser Ready - LabJACK IO

    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS:LASER_ACK
        io: i
        field: ZNAM "OFF"
        field: ONAM "ON"
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL1124_00_12]^Channel 1^Input'}
    bAmphosLaserACK AT %I* : BOOL; //  Laser Acknowledge - LabJACK IO

    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS:LASER_BUSY
        io: i
        field: ZNAM "OFF"
        field: ONAM "ON"
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL1124_00_12]^Channel 2^Input'}
    bAmphosLaserBusy AT %I* : BOOL; //  Laser Busy - LabJACK IO

    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS:SHUTTER_CMD
        io: io
        field: ZNAM "OFF"
        field: ONAM "ON"
    '}
    bAmphosShutterCMD : BOOL ; // CMD to Amphos for Shutter Operation

    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS:SHUTTER_ENABLE
        io: io
        field: ZNAM "OFF"
        field: ONAM "ON"
    '}
    bAmphosShutterEnable : BOOL; // Shutter Enable RBV from User

// Amphos Enable
     {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS:ENABLE
        io: i
        field: OSV NO_ALARM
        field: ZSV MAJOR
        field: ZNAM DISABLED
        field: ONAM ENABLED
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL2624_00_07]^Channel 3^Output'}
    bAmphosEnable AT %Q* : BOOL; // Amphos Override Relay

//LabJack IO Controls
    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS_SHUTTER:ENABLE
        io: i
        field: OSV NO_ALARM
        field: ZSV MAJOR
        field: ZNAM DISABLED
        field: ONAM ENABLED
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL1124_00_11]^Channel 2^Input'}
    bAmphosShutterStatus AT %I* : BOOL; // EL1124_02 - Ch2 Labjack IO Amphos Shutter Status
    bAmphosShutterEnableManualOperation AT %Q* : BOOL := TRUE;

    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:AMPHOS_RELAY:ENABLE
        io: i
        field: OSV NO_ALARM
        field: ZSV MAJOR
        field: ZNAM DISABLED
        field: ONAM ENABLED
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL2624_00_08]^Channel 1^Output'}
    bAmphosRelayOPEN AT %Q* : BOOL; // Labjack IO - Amphos CMD Shutter Open

    {attribute 'TcLinkTo' := 'TIIB[EL2624_00_08]^Channel 4^Output'}
    bAmphosRelayCLOSE AT %Q* : BOOL; // Labjack IO - Amphos CMD Shutter Close

//Carbide control
    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:CARBIDE_SHUTTER:ENABLE
        io: i
        field: OSV NO_ALARM
        field: ZSV MAJOR
        field: ZNAM DISABLED
        field: ONAM ENABLED
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL2624_00_07]^Channel 4^Output'}
    bCarbideShutterEnable AT %Q* : BOOL; // Carbide Shutter Enable Relay
    bCarbideShutterEnableManualOperation AT %Q* : BOOL := TRUE;

    (* Slot11 EL1124 *)
    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:MPC:POWER_STATE
        io: i
        field: ZNAM "OFF"
        field: ONAM "ON"
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL1124_00_11]^Channel 3^Input'}
    bCarbideOn AT %I* : BOOL; // Carbide RA Ready Signal

//Dump Chiller control
   {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:DUMP_CHILLER_RELAY:ENABLE
        io: i
        field: OSV NO_ALARM
        field: ZSV MAJOR
        field: ZNAM DISABLED
        field: ONAM ENABLED
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL2624_00_07]^Channel 1^Output'}
    bDumpChillerRelay AT %Q* : BOOL; // Ch1 Dump chiller NC relay
// Baseplate Chiller control
    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:BASEPLATE_CHILLER_RELAY:ENABLE
        io: i
        field: OSV NO_ALARM
        field: ZSV MAJOR
        field: ZNAM DISABLED
        field: ONAM ENABLED
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL2624_00_07]^Channel 2^Output'}
    bBaseplateChillerRelay AT %Q* : BOOL; // Ch2 Baseplate chiller NC relay

// LSS Mirror Status
    {attribute 'pytmc' := '
        pv: @(PREFIX):LPS:MIRROR_STATUS
        io: i
        field: ZNAM "OFF"
        field: ONAM "ON"
    '}
    {attribute 'TcLinkTo' := 'TIIB[EL1004_00_8A]^Channel 1^Input'}
    bMirrorStatus AT %I* : BOOL; //  LSS Mirror Status

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>