<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="F_LaserShutterEnable" Id="{1f42dc3c-bc58-4cee-975c-061cf0c31ef2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_LaserShutterEnable : BOOL
VAR_INPUT
    //bAmphosOn : BOOL; // Whether the amphos is on
    fOpcpaVoltage       : LREAL; // The voltage of the OPCPA
    fAmphosVoltage      : LREAL; // The Amphos voltage
    fMPCVoltage         : LREAL; // The MPC voltage
    AmphosStatus        :BOOL; //Amphos Laser Shutter Status
    bLoopTempOverride01 : BOOL; // Whether the chiller loop error is overriden
    bLoopTempOverride02 : BOOL; // Whether the chiller loop error is overriden
    bLoopTempOverride03 : BOOL; // Whether the chiller loop error is overriden
    bLoopTempOverride04 : BOOL; // Whether the chiller loop error is overriden
    bLoopTempOverride05 : BOOL; // Whether the chiller loop error is overriden
    Mode                : E_Mode; // Mode of operation
    bAmphosShutterIN    : BOOL; // Amphos Shutter Status
//    bShutterStatus      : BOOL; // Shutter Status
END_VAR

VAR_IN_OUT CONSTANT
    stErrors            : ST_ErrorStates; // Currently detected errors
    stOpcpaSetpoints    : ST_LaserSetpoints; // OPCPA setpoints
    stAmphosSetpoints   : ST_LaserSetpoints; // The Amphos setpoints
    stMPCSetpoints      : ST_LaserSetpoints; // The MPC setpoints
END_VAR

VAR
    bChillerErrors      : BOOL; // Local logical sum of chiller error states
    bTempSwitchErrors   : BOOL; // Local logical sum of temperature switch errors
    bAmphosUnderVolt    : BOOL; // Local var for checking Amphos under MinVoltage
    bOpcpaUnderVolt     : BOOL; // Local var for checking OPCPA under MinVoltage
    bMpcUnderVolt       : BOOL; // Local var for checking MPC under MinVoltage
END_VAR

VAR_OUTPUT
    bAmphosShutterOUT   : BOOL; // Allowed Amphos Shutter state, point to NC Relay GVL
    bCarbideShutterOUT  : BOOL; // Allowed Carbide Shutter state, point to NC Relay GVL
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*// The Amphos Shutter Enable function sends and Enable or Disable bit as an output to be used by the Amphos Shutter Command block
// AmphosShutterEnable := True := OPEN SHUTTER
// AmphosShutterEnable := FALSE := CLOSE SHUTTER
The below logic follows the logic table
Note : In master override modes, the Shutter state will hold the previous state value, unless manually forced
*)

bChillerErrors := (
                 (NOT bLoopTempOverride01 AND stErrors.bChillerLoop01) OR
                 (NOT bLoopTempOverride02 AND stErrors.bChillerLoop02) OR
                 (NOT bLoopTempOverride03 AND stErrors.bChillerLoop03) OR
                 (NOT bLoopTempOverride04 AND stErrors.bChillerLoop04) OR
                 (NOT bLoopTempOverride05 AND stErrors.bChillerLoop05)
                 );
bTempSwitchErrors := (
                     NOT GVL_IO.bLoopTempSW01 OR
                     NOT GVL_IO.bLoopTempSW02 OR
                     NOT GVL_IO.bLoopTempSW03 OR
                     NOT GVL_IO.bLoopTempSW04 OR
                     NOT GVL_IO.bLoopTempSW05
                     );
bAmphosUnderVolt := fAmphosVoltage < stAmphosSetpoints.nMinVoltage;
bOpcpaUnderVolt := fOpcpaVoltage < stOpcpaSetpoints.nMinVoltage;
bMpcUnderVolt := fMPCVoltage < stMPCSetpoints.nMinVoltage;

IF (stErrors.bHardwareFailure // Close shutter if there is a hardware failure
    (*OR stErrors.bLeakOpticalTableAmphosOn OR stErrors.bLeakOpcpaCarbideOn OR stErrors.bLeakUnderTable*) // Close shutter if there is a leak on the optical table with the amphos on, a leak under the table, or a leak inside the OPCPA with Carbide on
    //Close shutter if the amphos is on and the temperature is too high in any loop. Ignore if operator override is enabled
     OR (bChillerErrors OR bTempSwitchErrors)
    // Close shutter if in OPCPA beam error state and OPCPA voltage too low
     OR (bOpcpaUnderVolt AND stErrors.bOpcpaBeam)
    // Close the shutter if there is a Dump Chiller error
     OR stErrors.bDumpChiller
    )
    // Check global IO for redundancy of Dump Chiller Errors
    OR (NOT GVL_IO.bDumpChillerFlow)
    OR (NOT GVL_IO.bBaseplateChillerFlow)
THEN
    bAmphosShutterOUT := bCarbideShutterOUT := bCarbideShutterOUT := F_LaserShutterEnable := FALSE;
ELSE
    CASE MODE OF
        // With great overrides comes great responsibility, and burnt optics
        E_Mode.MASTER_Override:
        F_LaserShutterEnable := TRUE;
        bAmphosShutterIN := bAmphosShutterOUT;
        bCarbideShutterOUT := TRUE;

        E_Mode.Protection:
            // If the Amphos trips, always disable it
            IF bAmphosUnderVolt 
            THEN
                F_LaserShutterEnable := FALSE;
            ELSE
                F_LaserShutterEnable := TRUE;
            END_IF
            // Only open the Amphos shutter if all 3 lasers are happy
            IF (NOT bAmphosUnderVolt AND NOT bOpcpaUnderVolt AND NOT bMpcUnderVolt)
                THEN
                    bAmphosShutterOUT := TRUE;
            ELSE
                    bAmphosShutterOUT := FALSE;
            END_IF
            // Carbide Shutter is weird, allows solo Carbide use explicitly
            IF (NOT bAmphosUnderVolt AND NOT bOpcpaUnderVolt AND NOT bMpcUnderVolt)
                OR (bAmphosUnderVolt AND bOpcpaUnderVolt AND NOT bMpcUnderVolt)
                THEN
                bCarbideShutterOUT := TRUE;
            ELSE
                bCarbideShutterOUT := FALSE;
            END_IF

        E_Mode.Maintenance:
        // Just pass the Amphos shutter state
        bAmphosShutterIN := bAmphosShutterOUT;
        F_LaserShutterEnable := TRUE;
        // Close the carbide shutter if the MPC is unhappy
        IF bMpcUnderVolt
            THEN
            bCarbideShutterOUT := FALSE;
            ELSE
            bCarbideShutterOUT := TRUE;
        END_IF

        // Undefined state, do not get here. Do not pass go, do not collect 200 dollars
        ELSE
            F_AmphosShutterEnable := FALSE;
    END_CASE
END_IF]]></ST>
    </Implementation>
    <LineIds Name="F_LaserShutterEnable">
      <LineId Id="49" Count="22" />
      <LineId Id="126" Count="0" />
      <LineId Id="72" Count="16" />
      <LineId Id="167" Count="3" />
      <LineId Id="166" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="90" Count="5" />
      <LineId Id="122" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="135" Count="1" />
      <LineId Id="133" Count="0" />
      <LineId Id="137" Count="2" />
      <LineId Id="141" Count="1" />
      <LineId Id="145" Count="1" />
      <LineId Id="144" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="153" Count="5" />
      <LineId Id="165" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="110" Count="2" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>